[gd_scene load_steps=16 format=3 uid="uid://em305t33pc75"]

[ext_resource type="Script" path="res://Entities/frog.gd" id="1_ayld7"]
[ext_resource type="SpriteFrames" uid="uid://cyhosoqctpejp" path="res://Entities/frog_man_sprites.tres" id="2_n5f1c"]
[ext_resource type="Texture2D" uid="uid://dhwilqoukx5vr" path="res://Gfx/MAN FINGERS.png" id="3_gb4b3"]
[ext_resource type="Texture2D" uid="uid://1sjb5nfq2qp2" path="res://Gfx/Martini.png" id="3_p0b3i"]
[ext_resource type="Texture2D" uid="uid://c0o6ebbl5dc1u" path="res://Gfx/SwampWater.png" id="4_sxkev"]
[ext_resource type="Texture2D" uid="uid://bux7lg2hr1y8r" path="res://Gfx/order_recieved.png" id="5_qdq2p"]
[ext_resource type="Texture2D" uid="uid://chs6pi6572leg" path="res://Gfx/bubble.png" id="5_xn64t"]
[ext_resource type="Texture2D" uid="uid://bo00yu4x2o240" path="res://Gfx/disturbed.png" id="6_4a6ci"]
[ext_resource type="Texture2D" uid="uid://ca6w3yygludom" path="res://Gfx/order_wrong.png" id="7_jhc0q"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uvtbl"]
radius = 0.653424

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jdarc"]
radius = 0.735

[sub_resource type="Animation" id="Animation_7hfwg"]
resource_name = "Pushed"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteOrigin:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -1.48353, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2)
}

[sub_resource type="Animation" id="Animation_t5p0j"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteOrigin:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteOrigin:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_fk4op"]
resource_name = "Raise_Pushed"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteOrigin:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-1.484, -0.05, 0, 0.0634295, 1.80293, 0.298848, -0.0365705, 0.340314, 0.0300962, -0.985379, 0, -0.0365705, -0.00244622, 0.05, 0),
"times": PackedFloat32Array(0, 0.133333, 0.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rtemd"]
_data = {
"Pushed": SubResource("Animation_7hfwg"),
"RESET": SubResource("Animation_t5p0j"),
"Raise_Pushed": SubResource("Animation_fk4op")
}

[node name="Frog" type="CharacterBody3D" node_paths=PackedStringArray("movement_timer", "talking_timer", "invincibility_timer")]
collision_layer = 2
script = ExtResource("1_ayld7")
movement_timer = NodePath("MovementTimer")
talking_timer = NodePath("TalkingTimer")
invincibility_timer = NodePath("InvincibilityTimer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_uvtbl")

[node name="MovementTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="TalkingTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
unique_name_in_owner = true

[node name="SpriteOrigin" type="Node3D" parent="."]

[node name="Hand" type="Sprite3D" parent="SpriteOrigin"]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 1, -0.2, 1.1, 0)
visible = false
sorting_offset = 1.0
sorting_use_aabb_center = false
billboard = 2
texture = ExtResource("3_gb4b3")

[node name="MainSprite" type="AnimatedSprite3D" parent="SpriteOrigin"]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 1, -0.2, 1.1, 0)
sorting_use_aabb_center = false
billboard = 2
sprite_frames = ExtResource("2_n5f1c")
animation = &"relax_neutral"

[node name="Drink" type="Sprite3D" parent="SpriteOrigin/MainSprite"]
transform = Transform3D(6.66667, 0, 0, 0, 6.66667, 0, 0, 0, 1, 0, 0, 0)
visible = false
sorting_offset = 1.1
sorting_use_aabb_center = false
offset = Vector2(-1350, 1500)
pixel_size = 0.0005
billboard = 2
texture = ExtResource("3_p0b3i")
region_rect = Rect2(0, 0, 10000, 1500)

[node name="GoodOrder" type="Sprite3D" parent="SpriteOrigin/MainSprite"]
visible = false
sorting_offset = 1.1
centered = false
offset = Vector2(-600, 600)
flip_h = true
billboard = 2
texture = ExtResource("5_qdq2p")

[node name="Angry" type="Sprite3D" parent="SpriteOrigin/MainSprite"]
visible = false
sorting_offset = 1.1
centered = false
offset = Vector2(-600, 600)
flip_h = true
billboard = 2
texture = ExtResource("6_4a6ci")

[node name="WrongOrder" type="Sprite3D" parent="SpriteOrigin/MainSprite"]
visible = false
sorting_offset = 1.1
centered = false
offset = Vector2(-400, 550)
flip_h = true
billboard = 2
texture = ExtResource("7_jhc0q")

[node name="InteractionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_jdarc")

[node name="BubbleRoot" type="Node3D" parent="."]
visible = false

[node name="Bubble" type="Sprite3D" parent="BubbleRoot"]
transform = Transform3D(1, 0, 0, 0, 0.774315, 0, 0, 0, 1, 0, 2.02674, 0)
sorting_offset = 2.0
offset = Vector2(600, 500)
pixel_size = 0.001
billboard = 2
texture = ExtResource("5_xn64t")

[node name="Sprite3D" type="Sprite3D" parent="BubbleRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.18607, 0)
sorting_offset = 3.0
offset = Vector2(1148.39, 750)
pixel_size = 0.0005
billboard = 2
texture = ExtResource("4_sxkev")

[node name="Label3D" type="Label3D" parent="BubbleRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.6, 0)
visible = false
sorting_offset = 1.0
billboard = 2
text = "I WANT A"

[node name="DrinkingTimer" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="SpriteAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rtemd")
}

[connection signal="timeout" from="TalkingTimer" to="." method="_on_talking_timer_timeout"]
[connection signal="animation_changed" from="SpriteOrigin/MainSprite" to="." method="_on_main_sprite_animation_changed"]
